--- a/.github/workflows/Plan.yml
+++ b/.github/workflows/Plan.yml
@@ -40,4 +40,7 @@ jobs:
         if: github.event_name == 'push'
         run: terraform plan -no-color
 
+      - name: terraform apply
+        run: terraform apply --auto-approve
+
         
